@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- ContentBox items can now be sorted by Effective Date in addition to the
+  already existing possibility of being sorted by Modification Date.
 Bug fixes:
 ~~~~~~~~~~
 - Wording "Current status" instead of "Actual status".
